# insighthub-backend/src/routes/posts_routes.ts
@@ -13,4 +13,6 @@ router.get('/:id', Post.getPostById);
 
 router.put('/:id', authMiddleware, Post.updatePostById);
 
+router.put('/:id/like', authMiddleware, express.text(), Post.updateLikeByPostId);
+
 export default router;
